--- a/requirements.txt
+++ b/requirements.txt
@@ -36,4 +36,4 @@ types-Pillow>=10.0.0
 pytest>=7.3.1
 pytest-asyncio>=0.21.0
 httpx>=0.24.0  # For TestClient in FastAPI
-unittest-mock>=1.3.0
+# unittest.mock is part of the Python standard library
